syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ackbox.raft.api";
option java_outer_classname = "RaftInternalApiProto";
option objc_class_prefix = "API";

package com.ackbox.raft;

// The internal node service definition.
service InternalNode {
  // Start an election for a given term.
  rpc handleVote (VoteRequest) returns (VoteReply) {}

  // Append entries to replicated log.
  rpc handleAppend (AppendRequest) returns (AppendReply) {}

  // Install a snapshot to state machine.
  rpc handleSnapshot (stream SnapshotRequest) returns (SnapshotReply) {}
}

// The vote request message.
message VoteRequest {
  // Request timestamp (wall clock from issuer).
  int64 timestamp = 1;

  // Request unique identifier.
  string requestId = 2;

  // Candidate's partition.
  int32 candidatePartition = 3;

  // Candidate's term.
  int64 candidateTerm = 4;

  // Candidate's unique identifier.
  string candidateId = 5;

  // Index of candidate's last log entry.
  int64 lastLogIndex = 6;

  // Term of candidate's last log entry.
  int64 lastLogTerm = 7;
}

// The vote response message.
message VoteReply {
  // Possible status for a vote request.
  // - VOTE_GRANTED: if node granted the vote to the candidate.
  // - VOTE_NOT_GRANTED: if node did NOT grant the vote to the candidate.
  // - NODE_NOT_KNOWN: if follower received a request from a node that is not known.
  // - PROCESSING: if follower is busy processing previous requests.
  // - UNKNOWN: if follower is failed with unknown reason.
  enum Status {
    VOTE_GRANTED = 0;
    VOTE_NOT_GRANTED = 1;
    NODE_NOT_KNOWN = 2;
    PROCESSING = 3;
    UNKNOWN = 4;
  }

  // Response timestamp (wall clock from issuer).
  int64 timestamp = 1;

  // Current term, for candidate to update itself.
  int64 currentTerm = 2;

  // Response status for the vote request.
  Status status = 3;
}

// The append entry request message.
message AppendRequest {
  // Object representing a log entry.
  enum EntryType {
    STORE = 0;
    NETWORKING = 1;
  }
  message Entry {
    int64 index = 1;
    int64 term = 2;
    bytes entry = 3;
    EntryType type = 4;
  }

  // Request timestamp (wall clock from issuer).
  int64 timestamp = 1;

  // Request unique identifier.
  string requestId = 2;

  // Leader's partition.
  int32 leaderPartition = 3;

  // Leader's term.
  int64 leaderTerm = 4;

  // Leader's unique identifier so follower can redirect clients.
  string leaderId = 5;

  // Leader's commit index.
  int64 leaderCommitIndex = 6;

  // Index of log entry immediately preceding new ones.
  int64 previousLogIndex = 7;

  // Term of previous log index entry.
  int64 previousLogTerm = 8;

  // Log entries to store (empty for heartbeat; may send more than one for efficiency).
  repeated Entry entries = 9;
}

// The append entry response message.
message AppendReply {
  // Possible status for an append request.
  // - SUCCESS: if follower was able to successfully append the log entries.
  // - LEADER_MISMATCH: if follower detects that there are multiple leaders in the cluster for the partition.
  // - TERM_MISMATCH: if follower's term does not agree with issuer of the request.
  // - NODE_NOT_KNOWN: if follower received a request from a node that is not known.
  // - PROCESSING: if follower is busy processing previous requests.
  // - UNKNOWN: if follower is failed with unknown reason.
  enum Status {
    SUCCESS = 0;
    LEADER_MISMATCH = 1;
    TERM_MISMATCH = 2;
    LOG_STATE_MISMATCH = 3;
    NODE_NOT_KNOWN = 4;
    PROCESSING = 5;
    UNKNOWN = 6;
  }
  // Response timestamp (wall clock from issuer).
  int64 timestamp = 1;

  // Current term, for leader to update itself.
  int64 currentTerm = 2;

  // Last entry index found in the node's log.
  int64 lastLogIndex = 3;

  // Status of the response if follower contained entry matching previousLogIndex and previousLogTerm.
  Status status = 4;
}

// Install snapshot request message.
message SnapshotRequest {
  // Request timestamp (wall clock from issuer).
  int64 timestamp = 1;

  // Request unique identifier.
  string requestId = 2;

  // Leader's partition.
  int32 leaderPartition = 3;

  // Leader's term.
  int64 leaderTerm = 4;

  // Leader's unique identifier so follower can redirect clients.
  string leaderId = 5;

  // The snapshot replaces all entries up through and including this index.
  int64 lastIncludedLogIndex = 6;

  // The term of last included index.
  int64 lastIncludedLogTerm = 7;

  // Snapshot data to be installed.
  bytes data = 8;
}

// Install snapshot response message.
message SnapshotReply {
  // Possible status for a install snapshot request.
  // - SUCCESS: follower was able to install the snapshot successfully.
  // - LEADER_MISMATCH: if follower detects that there are multiple leaders in the cluster for the partition.
  // - TERM_MISMATCH: if follower's term does not agree with issuer of the request.
  // - NODE_NOT_KNOWN: if follower received a request from a node that is not known.
  // - PROCESSING: if follower is busy processing previous requests.
  // - UNKNOWN: if follower is failed with unknown reason.
  enum Status {
    SUCCESS = 0;
    LEADER_MISMATCH = 1;
    TERM_MISMATCH = 2;
    NODE_NOT_KNOWN = 3;
    PROCESSING = 4;
    UNKNOWN = 5;
  }

  // Response timestamp (wall clock from issuer).
  int64 timestamp = 1;

  // Current term, for leader to update itself.
  int64 currentTerm = 2;

  // Status code for the response.
  Status status = 3;
}
